8344904: Interned strings in old classes are not stored in AOT cache